--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+	height: 100vh;
+	background-image: url(./bg-img.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	font-family: 'Staatliches', cursive;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: #0f0f0f;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app::before {
+	content: '';
+	display: block;
+	height: 100vh;
+	width: 100vw;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: #5e6a9e36;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.heading {
+	font-size: 3rem;
+	margin-bottom: 1rem;
+	color: #000000;
+	letter-spacing: 5px;
+	z-index: 2;
 }
 
-.App-link {
-  color: #61dafb;
+.timer {
+	display: flex;
+	font-family: sans-serif;
+	z-index: 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timer h1 {
+	padding: 1rem;
+	margin-right: 10px;
+	color: #0f0f0f;
+	background: #505050ab;
+}
+
+.buttons {
+	z-index: 2;
+}
+
+.buttons button {
+	padding: 0.5rem 1rem;
+	font-family: 'Staatliches', cursive;
+	margin: 1.5rem 1rem;
+	color: #000000;
+	background: #3d3d3d80;
+	cursor: pointer;
+	border-radius: 5px;
+	border: none;
+	font-size: 1.2rem;
+}
+
+.buttons button:hover {
+	background: #2c2c2cda;
 }
